<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddUrlContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:layout_gravity="center"
    android:background="@drawable/background_add_url">

    <ImageView
        android:id="@+id/imageUrl"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_link"
        app:tint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textAddUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/add_url"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toEndOf="@id/imageUrl"
        app:layout_constraintTop_toTopOf="@id/imageUrl"
        app:layout_constraintBottom_toBottomOf="@id/imageUrl"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:background="@null"
        android:imeOptions="actionDone"
        android:includeFontPadding="false"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:fontFamily="@font/ubuntu_regular"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        android:hint="@string/enter_url"
        android:textColorHint="@color/colorTextHint"
        app:layout_constraintTop_toBottomOf="@id/imageUrl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDoneAddUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:text="@string/add"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/editUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancelAddUrl"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_4sdp"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:text="@string/cancel"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toTopOf="@id/buttonDoneAddUrl"
        app:layout_constraintEnd_toStartOf="@id/buttonDoneAddUrl"
        app:layout_constraintBottom_toBottomOf="@id/buttonDoneAddUrl"/>

</androidx.constraintlayout.widget.ConstraintLayout>